@@ -2,137 +2,9 @@
 <html>
 <head>
   <link rel="shortcut icon" href="/images/favicon.ico" />
+  <link rel="stylesheet" href="/rivendellaudio.css" />
 
   <title>Rivendell Radio Automation System</title>
-  <style>
-    .center {
-    text-align: center;
-    }
-    .half-column {
-    padding: 10px;
-    text-align: left;
-    vertical-align: top;
-    color: black;
-    background-color: white;
-    font-family: arial,san-serif;
-    font-size: 10pt;
-    font-weight: normal;
-    width: 40%;
-    }
-    .copyright {
-    font-size: 8pt;
-    font-weight: normal;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    color: black;
-    }
-    .footer {
-    color: white;
-    background-color: #9C0001;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-    height: 4pt;
-    font-size: 2pt;
-    }
-    .header {
-    color: white;
-    background-color: #9C0001;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-    }
-    .header-left {
-    color: black;
-    font-family: arial,san-serif;
-    font-size: 10pt;
-    font-weight: normal;
-    font-weight: bold;
-    background-color: white;
-    text-align: left;
-    border: 0
-    padding: 0;
-    spacing: 0;
-    }
-    .header-right {
-    color: black;
-    font-family: arial,san-serif;
-    font-size: 10pt;
-    font-weight: normal;
-    background-color: white;
-    text-align: right;
-    border: 0
-    padding: 0;
-    spacing: 0;
-    }
-    .section {
-    font-family: arial,san-serif;
-    font-size: 10pt;
-    font-weight: normal;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-    color: black;
-    background-color: white;
-    padding 0;
-    }
-    .rivendell {
-    color: 9C0001;
-    font-family: arial,san-serif;
-    font-size: 18;
-    font-weight: bold;
-    }
-    .small {
-    font-size: 8pt;
-    font-weight: normal;
-    color: black;
-    }
-    .small-link {
-    font-size: 8pt;
-    font-weight: normal;
-    color: #9C0001;
-    }
-    .small-title {
-    text-align: right;
-    vertical-align: text-top
-    font-family: arial,san-serif;
-    font-size: 9pt;
-    font-weight: bold;
-    color: #9C0001;
-    }
-    .sub-title {
-    text-align: left;
-    vertical-align: text-top;
-    font-size: 12pt;
-    font-weight: bold;
-    color: #9C0001;
-    }
-    .title {
-    text-align: center;
-    font-size: 12pt;
-    font-weight: bold;
-    color: #9C0001;
-    }
-    .top {
-    font-family: arial,san-serif;
-    font-size: 10pt;
-    font-weight: normal;
-    color: black;
-    margin:0 0 0 0;
-    min-width: 800px;
-    }
-    .versions {
-    border: 5px solid white;
-    border-radius: 5px;
-    border-collapse: collapse;
-    padding: 0;
-    spacing: 0;
-    }
-    a {
-    color: #9C0001;
-    }
-  </style>
 
   <meta http-equiv=Content-Type content="text/html; charset=UTF-8">
   <meta charset="UTF-8">
